Relatórios com filter, map, reduce e sort

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     <tbody id="tabelaAlunos"></tbody>
   </table>
 
+  <h2>Relatórios</h2>
+  <button onclick="listarAprovados()">Alunos Aprovados</button>
+  <button onclick="mediaNotas()">Média das Notas</button>
+  <button onclick="mediaIdades()">Média das Idades</button>
+  <button onclick="ordenarNomes()">Ordenar Nomes</button>
+  <button onclick="quantidadePorCurso()">Qtd por Curso</button>
+
+  <pre id="relatorio"></pre>
+
+
   <script src="script.js"></script>
 </body>
 </html>
